{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 29,
  "lineage": "72fd7e25-ad31-4eef-bdc7-6516e697e69a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Cactus-vpc-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571257010451:internet-gateway/igw-07f98a602647a0af9",
            "id": "igw-07f98a602647a0af9",
            "owner_id": "571257010451",
            "tags": {
              "Name": "Cactus-vpc-internet-gateway"
            },
            "vpc_id": "vpc-069af6c0df12826be"
          },
          "dependencies": [
            "aws_vpc.Cactus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "Cactus-vpc-network-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571257010451:network-acl/acl-0420922689331abf2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0420922689331abf2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "571257010451",
            "subnet_ids": [
              "subnet-012234b1525e0482b",
              "subnet-06149d790f564f7af"
            ],
            "tags": {
              "Name": "Cactus-vpc-network-acl"
            },
            "vpc_id": "vpc-069af6c0df12826be"
          },
          "dependencies": [
            "aws_subnet.Cactus-vpc-subnet1",
            "aws_subnet.Cactus-vpc-subnet2",
            "aws_vpc.Cactus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Cactus-vpc-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01dff0c38f9b85413",
            "owner_id": "571257010451",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f98a602647a0af9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Cactus-vpc-route-table"
            },
            "vpc_id": "vpc-069af6c0df12826be"
          },
          "dependencies": [
            "aws_internet_gateway.Cactus-vpc-internet-gateway",
            "aws_vpc.Cactus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Cactus-vpc-route-table-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077913b98480f8825",
            "route_table_id": "rtb-01dff0c38f9b85413",
            "subnet_id": "subnet-012234b1525e0482b"
          },
          "dependencies": [
            "aws_internet_gateway.Cactus-vpc-internet-gateway",
            "aws_route_table.Cactus-vpc-route-table",
            "aws_subnet.Cactus-vpc-subnet1",
            "aws_vpc.Cactus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Cactus-vpc-route-table-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc1ff907b63b5c94",
            "route_table_id": "rtb-01dff0c38f9b85413",
            "subnet_id": "subnet-06149d790f564f7af"
          },
          "dependencies": [
            "aws_internet_gateway.Cactus-vpc-internet-gateway",
            "aws_route_table.Cactus-vpc-route-table",
            "aws_subnet.Cactus-vpc-subnet2",
            "aws_vpc.Cactus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Cactus-vpc-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571257010451:security-group/sg-0579c39878447cd1c",
            "description": "Allow HTTP, HTTPS, and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0579c39878447cd1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Cactus-vpc-security-group",
            "name_prefix": "",
            "owner_id": "571257010451",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-069af6c0df12826be"
          },
          "dependencies": [
            "aws_vpc.Cactus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Cactus-vpc-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571257010451:subnet/subnet-012234b1525e0482b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-012234b1525e0482b",
            "map_public_ip_on_launch": false,
            "owner_id": "571257010451",
            "tags": {
              "Name": "Cactus-vpc-subnet"
            },
            "vpc_id": "vpc-069af6c0df12826be"
          },
          "dependencies": [
            "aws_vpc.Cactus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Cactus-vpc-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571257010451:subnet/subnet-06149d790f564f7af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06149d790f564f7af",
            "map_public_ip_on_launch": false,
            "owner_id": "571257010451",
            "tags": {
              "Name": "Cactus-vpc-subnet"
            },
            "vpc_id": "vpc-069af6c0df12826be"
          },
          "dependencies": [
            "aws_vpc.Cactus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Cactus-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571257010451:vpc/vpc-069af6c0df12826be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c876816bf8a41a2",
            "default_route_table_id": "rtb-08c15875c92cea738",
            "default_security_group_id": "sg-00be7c60974d8a1d5",
            "dhcp_options_id": "dopt-79128d03",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-069af6c0df12826be",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08c15875c92cea738",
            "owner_id": "571257010451",
            "tags": {
              "Name": "Cactus-vpc"
            }
          }
        }
      ]
    }
  ]
}